package singularity;

message Command {
	required bytes command = 1;
	repeated bytes args = 2;
	optional uint32 timeout = 3;
}

message StillAlive {

}

message CommandFinished {
	required int32 exit_code = 1;
}

message CommandOutput {
	optional bytes stdout = 1;
	optional bytes stderr = 2;	
}